--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -2,23 +2,23 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 # Translators:
 # Peter Pfeufer <rounon.dax@terra-nanotech.de>, 2021
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-17 13:21+0100\n"
+"POT-Creation-Date: 2021-11-17 14:22+0100\n"
 "PO-Revision-Date: 2021-11-17 12:26+0000\n"
 "Last-Translator: Peter Pfeufer <rounon.dax@terra-nanotech.de>, 2021\n"
 "Language-Team: German (https://www.transifex.com/ppfeufer/teams/113732/de/)\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: app_settings.py:27 templates/afat/partials/menu.html:15
@@ -67,7 +67,7 @@ msgstr "FAT Link Ablaufzeit in Minuten"
 msgid "Expiry time in minutes"
 msgstr "Ablaufzeit in Minuten"
 
-#: helper/views_helper.py:50 helper/views_helper.py:171
+#: helper/views_helper.py:50 helper/views_helper.py:169
 #: templates/afat/view/fatlinks/fatlinks_overview.html:83
 msgid "via ESI"
 msgstr "via ESI"
@@ -79,14 +79,19 @@ msgid ""
 "Clicking here will stop the automatic tracking through ESI for this fleet "
 "and close the associated FAT link."
 msgstr ""
-"Klicke hier um das automatische Tracking via ESI für diese Flotte zu stoppen"
-" und den FAT Link zu schließen."
+"Klicke hier um das automatische Tracking via ESI für diese Flotte zu stoppen "
+"und den FAT Link zu schließen."
 
-#: helper/views_helper.py:85
-msgid "<p>Are you sure you want to close ESI fleet with "
+#: helper/views_helper.py:84
+#, fuzzy, python-brace-format
+#| msgid "<p>Are you sure you want to delete FAT link {fatlink_fleet}?</p>"
+msgid ""
+"<p>Are you sure you want to close ESI fleet with ID {fatlink.esi_fleet_id} "
+"from {fatlink.character.character_name}?</p>"
 msgstr ""
+"<p>Bist Du sicher das Du den FAT Link {fatlink_fleet} löschen möchtest?</p>"
 
-#: helper/views_helper.py:88
+#: helper/views_helper.py:86
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:39
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:42
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:31
@@ -94,21 +99,26 @@ msgstr ""
 msgid "Stop Tracking"
 msgstr "Tracking stoppen"
 
-#: helper/views_helper.py:112 helper/views_helper.py:182
+#: helper/views_helper.py:110 helper/views_helper.py:180
 msgid "Delete"
 msgstr "Löschen"
 
-#: helper/views_helper.py:114
+#: helper/views_helper.py:112
 #, python-brace-format
 msgid "<p>Are you sure you want to delete FAT link {fatlink_fleet}?</p>"
 msgstr ""
 "<p>Bist Du sicher das Du den FAT Link {fatlink_fleet} löschen möchtest?</p>"
 
-#: helper/views_helper.py:184
-msgid "<p>Are you sure you want to remove "
+#: helper/views_helper.py:182
+#, fuzzy, python-brace-format
+#| msgid "<p>Are you sure you want to delete FAT link {fatlink_fleet}?</p>"
+msgid ""
+"<p>Are you sure you want to remove {fat.character.character_name} from this "
+"FAT link?</p>"
 msgstr ""
+"<p>Bist Du sicher das Du den FAT Link {fatlink_fleet} löschen möchtest?</p>"
 
-#: helper/views_helper.py:236
+#: helper/views_helper.py:233
 #, python-brace-format
 msgid "{log.fatlink_hash} (Deleted)"
 msgstr "{log.fatlink_hash} (Gelöscht)"
@@ -245,9 +255,12 @@ msgstr "ESI Link erstellen'"
 #: templates/afat/partials/fatlinks/add/esi_link.html:15
 msgid ""
 "\n"
-"                    This option will automatically register and track the entire fleet\n"
-"                    without fleet members having to click a link.<br><b>Use this if you\n"
-"                    are Fleet Boss</b>, otherwise please use the clickable FAT link\n"
+"                    This option will automatically register and track the "
+"entire fleet\n"
+"                    without fleet members having to click a link.<br><b>Use "
+"this if you\n"
+"                    are Fleet Boss</b>, otherwise please use the clickable "
+"FAT link\n"
 "                    option.\n"
 "                "
 msgstr ""
@@ -306,8 +319,8 @@ msgstr ""
 #, python-format
 msgid ""
 "<p>Are you sure you want to re-open this FAT link for another "
-"%(reopen_duration)s minutes?<br>FAT links can be re-opened only "
-"once!<br><em>(Be aware, this action will be logged)</em></p>"
+"%(reopen_duration)s minutes?<br>FAT links can be re-opened only once!"
+"<br><em>(Be aware, this action will be logged)</em></p>"
 msgstr ""
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:62
@@ -396,8 +409,7 @@ msgstr ""
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:7
 msgid ""
-"You currently have (an) active ESI fleet(s) under the following "
-"character(s):"
+"You currently have (an) active ESI fleet(s) under the following character(s):"
 msgstr ""
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:42
@@ -549,8 +561,8 @@ msgstr "Charakterstatistik"
 
 #: templates/afat/partials/statistics/overview/tabs/corps.html:6
 msgid ""
-"Corporations <small>(Click on an alliance name to see their "
-"corporations)</small>"
+"Corporations <small>(Click on an alliance name to see their corporations)</"
+"small>"
 msgstr ""
 
 #: templates/afat/partials/statistics/overview/tabs/mine.html:7
@@ -649,11 +661,13 @@ msgstr "Logs"
 #, python-format
 msgid ""
 "\n"
-"            Logs are only kept for %(log_duration)s days. Logs older than that are removed automatically.\n"
+"            Logs are only kept for %(log_duration)s days. Logs older than "
+"that are removed automatically.\n"
 "        "
 msgstr ""
 "\n"
-"Logs werden nur für %(log_duration)s Tage gespeichert. Danach werden sie automatisch gelöscht."
+"Logs werden nur für %(log_duration)s Tage gespeichert. Danach werden sie "
+"automatisch gelöscht."
 
 #: templates/afat/view/logs/logs_overview.html:27
 msgid "Time"
@@ -681,8 +695,8 @@ msgstr "FAT Statistik"
 
 #: views/fatlinks.py:208
 msgid ""
-"<h4>Success!</h4><p>Clickable FAT Link Created!</p><p>Make sure to give your"
-" fleet members the link to click so that they get credit for this fleet.</p>"
+"<h4>Success!</h4><p>Clickable FAT Link Created!</p><p>Make sure to give your "
+"fleet members the link to click so that they get credit for this fleet.</p>"
 msgstr ""
 
 #: views/fatlinks.py:222
@@ -699,9 +713,9 @@ msgstr ""
 
 #: views/fatlinks.py:277
 msgid ""
-"<h4>Warning!</h4><p>To use the ESI function, you need to be in fleet and you"
-" need to be the fleet boss! You can create a clickable FAT link and share "
-"it, if you like.</p>"
+"<h4>Warning!</h4><p>To use the ESI function, you need to be in fleet and you "
+"need to be the fleet boss! You can create a clickable FAT link and share it, "
+"if you like.</p>"
 msgstr ""
 
 #: views/fatlinks.py:319 views/fatlinks.py:617 views/fatlinks.py:631
@@ -775,14 +789,14 @@ msgstr ""
 
 #: views/fatlinks.py:877
 msgid ""
-"<h4>Error!</h4><p>The fatlink hash provided is either invalid or the fatlink"
-" has already been deleted.</p>"
+"<h4>Error!</h4><p>The fatlink hash provided is either invalid or the fatlink "
+"has already been deleted.</p>"
 msgstr ""
 
 #: views/fatlinks.py:938
 msgid ""
-"<h4>Error!</h4><p>The hash provided is either invalid or has been "
-"deleted.</p>"
+"<h4>Error!</h4><p>The hash provided is either invalid or has been deleted.</"
+"p>"
 msgstr ""
 
 #: views/fatlinks.py:951
@@ -801,8 +815,7 @@ msgstr ""
 
 #: views/fatlinks.py:1110
 msgid ""
-"<h4>Error!</h4><p>The hash you provided does not match with any FAT "
-"link.</p>"
+"<h4>Error!</h4><p>The hash you provided does not match with any FAT link.</p>"
 msgstr ""
 
 #: views/statistics.py:170
