--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -2,23 +2,23 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 # Translators:
 # Peter Pfeufer <rounon.dax@terra-nanotech.de>, 2021
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-17 22:41+0100\n"
+"POT-Creation-Date: 2021-11-21 07:39+0100\n"
 "PO-Revision-Date: 2021-11-17 12:26+0000\n"
 "Last-Translator: Peter Pfeufer <rounon.dax@terra-nanotech.de>, 2021\n"
 "Language-Team: German (https://www.transifex.com/ppfeufer/teams/113732/de/)\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: app_settings.py:27 templates/afat/partials/menu.html:15
@@ -81,8 +81,8 @@ msgid ""
 "Clicking here will stop the automatic tracking through ESI for this fleet "
 "and close the associated FAT link."
 msgstr ""
-"Klicke hier um das automatische Tracking via ESI für diese Flotte zu stoppen"
-" und den FAT Link zu schließen."
+"Klicke hier um das automatische Tracking via ESI für diese Flotte zu stoppen "
+"und den FAT Link zu schließen."
 
 #: helper/views_helper.py:84
 #, python-brace-format
@@ -261,14 +261,19 @@ msgstr "ESI Link erstellen"
 #: templates/afat/partials/fatlinks/add/esi_link.html:15
 msgid ""
 "\n"
-"                    This option will automatically register and track the entire fleet\n"
-"                    without fleet members having to click a link.<br><b>Use this if you\n"
-"                    are Fleet Boss</b>, otherwise please use the clickable FAT link\n"
+"                    This option will automatically register and track the "
+"entire fleet\n"
+"                    without fleet members having to click a link.<br><b>Use "
+"this if you\n"
+"                    are Fleet Boss</b>, otherwise please use the clickable "
+"FAT link\n"
 "                    option.\n"
 "                "
 msgstr ""
 "\n"
-"Diese Option wird die Flotte automatisch registrieren und tracken. Es muss kein Link in der Flotte geteilt werden.<br><b>Nutze diese Option wenn Du der Flottenkommandant bist</b>, ansonsten nutze die Option für klickbare Links."
+"Diese Option wird die Flotte automatisch registrieren und tracken. Es muss "
+"kein Link in der Flotte geteilt werden.<br><b>Nutze diese Option wenn Du der "
+"Flottenkommandant bist</b>, ansonsten nutze die Option für klickbare Links."
 
 #: templates/afat/partials/fatlinks/add/esi_link.html:24
 msgid ""
@@ -331,12 +336,12 @@ msgstr ""
 #, python-format
 msgid ""
 "<p>Are you sure you want to re-open this FAT link for another "
-"%(reopen_duration)s minutes?<br>FAT links can be re-opened only "
-"once!<br><em>(Be aware, this action will be logged)</em></p>"
+"%(reopen_duration)s minutes?<br>FAT links can be re-opened only once!"
+"<br><em>(Be aware, this action will be logged)</em></p>"
 msgstr ""
 "<p>Bist Du sicher das Du diesen FAT Link für weitere %(reopen_duration)s "
-"Minuten wieder öffnen willst?<br>FAT Links können nur einmal wieder geöffnet"
-" werden!<br><em>(Diese Aktion wird geloggt)</em></p>"
+"Minuten wieder öffnen willst?<br>FAT Links können nur einmal wieder geöffnet "
+"werden!<br><em>(Diese Aktion wird geloggt)</em></p>"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:62
 msgid "Re-Open"
@@ -425,8 +430,7 @@ msgstr "FATs wurden automatisch via ESI verfolgt"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:7
 msgid ""
-"You currently have (an) active ESI fleet(s) under the following "
-"character(s):"
+"You currently have (an) active ESI fleet(s) under the following character(s):"
 msgstr ""
 "Du hast momentan eine oder mehrere aktive ESI Flotten mit den folgenden "
 "Charakteren:"
@@ -584,8 +588,8 @@ msgstr "Charakterstatistik"
 
 #: templates/afat/partials/statistics/overview/tabs/corps.html:6
 msgid ""
-"Corporations <small>(Click on an alliance name to see their "
-"corporations)</small>"
+"Corporations <small>(Click on an alliance name to see their corporations)</"
+"small>"
 msgstr ""
 "Corporations <small>(Klicke auf eine Allianz um deren Corporations zu "
 "sehen)</small>"
@@ -686,11 +690,13 @@ msgstr "Logs"
 #, python-format
 msgid ""
 "\n"
-"            Logs are only kept for %(log_duration)s days. Logs older than that are removed automatically.\n"
+"            Logs are only kept for %(log_duration)s days. Logs older than "
+"that are removed automatically.\n"
 "        "
 msgstr ""
 "\n"
-"Logs werden nur für %(log_duration)s Tage gespeichert. Danach werden sie automatisch gelöscht."
+"Logs werden nur für %(log_duration)s Tage gespeichert. Danach werden sie "
+"automatisch gelöscht."
 
 #: templates/afat/view/logs/logs_overview.html:27
 msgid "Time"
@@ -764,15 +770,15 @@ msgstr "November"
 msgid "December"
 msgstr "Dezember"
 
-#: views/fatlinks.py:208
+#: views/fatlinks.py:207
 msgid ""
-"<h4>Success!</h4><p>Clickable FAT Link Created!</p><p>Make sure to give your"
-" fleet members the link to click so that they get credit for this fleet.</p>"
+"<h4>Success!</h4><p>Clickable FAT Link Created!</p><p>Make sure to give your "
+"fleet members the link to click so that they get credit for this fleet.</p>"
 msgstr ""
 "<h4>Erfolg!</h4><p>Klickbarer FAT Link erstellt!</p><p>Bitte stelle sicher "
 "diesen Link in Deiner Flotte zu teilen.</p>"
 
-#: views/fatlinks.py:222
+#: views/fatlinks.py:221
 msgid ""
 "<h4>Error!</h4><p>Something went wrong when attempting to submit your "
 "clickable FAT Link.</p>"
@@ -780,7 +786,7 @@ msgstr ""
 "<h4>Fehler!</h4><p>Es ist etwas schief gelaufen beid er Erstellung Deines "
 "FAT Links.</p>"
 
-#: views/fatlinks.py:235
+#: views/fatlinks.py:234
 msgid ""
 "<h4>Warning!</h4><p>You must fill out the form on the \"Add FAT Link\" page "
 "to create a clickable FAT Link</p>"
@@ -788,22 +794,24 @@ msgstr ""
 "<h4>Warnung!</h4><p>Du musst das Formular auf der \"FAT Link hinzufügen\" "
 "Seite ausfüllen um einen FAT Link zu erstellen.</p>"
 
-#: views/fatlinks.py:277
+#: views/fatlinks.py:276
 msgid ""
-"<h4>Warning!</h4><p>To use the ESI function, you need to be in fleet and you"
-" need to be the fleet boss! You can create a clickable FAT link and share "
-"it, if you like.</p>"
+"<h4>Warning!</h4><p>To use the ESI function, you need to be in fleet and you "
+"need to be the fleet boss! You can create a clickable FAT link and share it, "
+"if you like.</p>"
 msgstr ""
 "<h4>Warnung!</h4><p>Um die ESI Funktion zu nutzen musst Du in einer Flotte "
 "sein und Du musst der Flottenkommandant sein. Du kannst allerdings auch "
 "einen klickbaren FAT Link erstellen, wenn Du magst.</p>"
 
-#: views/fatlinks.py:319 views/fatlinks.py:617 views/fatlinks.py:631
-#: views/fatlinks.py:645
-msgid "<h4>Warning!</h4>"
-msgstr "<h4>Warnung!</h4>"
+#: views/fatlinks.py:318
+msgid ""
+"<h4>Warning!</h4><p>Fleet with ID \"{fleet_from_esi[\"fleet_id\"]}\" for "
+"your character {creator_character.character_name} has already been "
+"registered and pilots joining this fleet are automatically tracked.</p>"
+msgstr ""
 
-#: views/fatlinks.py:363
+#: views/fatlinks.py:358
 msgid ""
 "<h4>Warning!</h4><p>Not Fleet Boss! Only the fleet boss can utilize the ESI "
 "function. You can create a clickable FAT link and share it, if you like.</p>"
@@ -812,33 +820,33 @@ msgstr ""
 "Flottenkommandant kann die ESI Funktion nutzen. Du kannst einen klickbaren "
 "FAT Link erstellen, wenn Du magst.</p>"
 
-#: views/fatlinks.py:429
+#: views/fatlinks.py:423
 msgid ""
 "<h4>Success!</h4><p>FAT Link Created!</p><p>FATs have been queued, they may "
 "take a few mins to show up.</p><p>Pilots who join later will be "
 "automatically added until you close or leave the fleet in-game.</p>"
 msgstr ""
-"<h4>Erfolg!</h4><p>FAT Link erstellt!</p><p>FATs werden eingelesen. Dies mag"
-" einen Moment dauern</p><p>Piloten welche später der Flotte beitreten werden"
-" automatisch hinzugefügt bis Du die Flotte schließt oder verlässt.</p>"
+"<h4>Erfolg!</h4><p>FAT Link erstellt!</p><p>FATs werden eingelesen. Dies mag "
+"einen Moment dauern</p><p>Piloten welche später der Flotte beitreten werden "
+"automatisch hinzugefügt bis Du die Flotte schließt oder verlässt.</p>"
 
-#: views/fatlinks.py:475
+#: views/fatlinks.py:469
 msgid ""
 "<h4>Error!</h4><p>Something went wrong when attempting to submit your ESI "
 "FAT Link.</p>"
 msgstr "<h4>Fehler!</h4><p>Irgendetwas ist schief gelaufen.</p>"
 
-#: views/fatlinks.py:512
+#: views/fatlinks.py:506
 msgid "<h4>Warning!</h4><p>No FAT link hash provided.</p>"
 msgstr "<h4>Warnung!</h4><p>Keinen FAT Link Hash zur Verfügung gestellt.</p>"
 
-#: views/fatlinks.py:523 views/fatlinks.py:685
+#: views/fatlinks.py:517 views/fatlinks.py:668
 msgid "<h4>Warning!</h4><p>The hash provided is not valid.</p>"
 msgstr ""
 "<h4>Warnung!</h4><p>Der zur Verfügung gestellte FAT Link Hash ist nicht "
 "gültig.</p>"
 
-#: views/fatlinks.py:536
+#: views/fatlinks.py:530
 msgid ""
 "<h4>Warning!</h4><p>Sorry, that FAT Link is expired. If you were on that "
 "fleet, contact your FC about having your FAT manually added.</p>"
@@ -847,26 +855,50 @@ msgstr ""
 "Flotte warst kontaktiere bitte Deinen FC damit dieser Dich manuell "
 "hinzufügen kann.</p>"
 
-#: views/fatlinks.py:599 views/fatlinks.py:901 views/fatlinks.py:969
-msgid "<h4>Success!</h4>"
-msgstr "<h4>Erfolg!</h4>"
+#: views/fatlinks.py:593
+#, python-brace-format
+msgid ""
+"<h4>Success!</h4><p>FAT registered for {character.character_name} at "
+"{fleet_name}</p>"
+msgstr ""
 
-#: views/fatlinks.py:658
+#: views/fatlinks.py:608
+#, python-brace-format
+msgid ""
+"<h4>Warning!</h4><p>A FAT already exists for the selected character "
+"({character.character_name}) and fleet combination.</p>"
+msgstr ""
+
+#: views/fatlinks.py:619
+#, python-brace-format
+msgid ""
+"<h4>Warning!</h4><p>Cannot register the fleet participation for {character."
+"character_name}. The character needs to be online.</p>"
+msgstr ""
+
+#: views/fatlinks.py:630
+#, python-brace-format
+msgid ""
+"<h4>Warning!</h4><p>There was an issue with the ESI token for {character."
+"character_name}. Please try again.</p>"
+msgstr ""
+
+#: views/fatlinks.py:641
 msgid ""
 "<h4>Warning!</h4><p>The hash provided is not for a clickable FAT Link.</p>"
 msgstr ""
 "<h4>Warnung!</h4><p>Der FAT Link Hash ist nicht für einen klickbaren FAT "
 "Link.</p>"
 
-#: views/fatlinks.py:714
+#: views/fatlinks.py:697
 msgid "<h4>Success!</h4><p>Fleet name successfully changed.</p>"
 msgstr "<h4>Erfolg!</h4><p>Flottennname erfolgreich geändert.</p>"
 
-#: views/fatlinks.py:733
+#: views/fatlinks.py:716
 msgid "<h4>Success!</h4><p>Manual FAT processed.</p>"
 msgstr "<h4>Erfolg!</h4><p>Manueller FAT Eintrag verarbeitet.</p>"
 
-#: views/fatlinks.py:757
+#: views/fatlinks.py:740
 msgid ""
 "<h4>Oh No!</h4><p>Manual FAT processing failed! The character name you "
 "entered was not found.</p>"
@@ -874,41 +906,53 @@ msgstr ""
 "<h4>Oh Nein!</h4><p>Manueller FAT Eintrag fehlgeschlagen. Der Charakter "
 "konnte nicht gefunden werden.</p>"
 
-#: views/fatlinks.py:766
+#: views/fatlinks.py:749
 msgid "<h4>Oh No!</h4><p>Something went wrong!</p>"
 msgstr "<h4>Oh Nein!</h4><p>Irgendetwas ist schief gelaufen.</p>"
 
-#: views/fatlinks.py:865
+#: views/fatlinks.py:848
 msgid "<h4>Warning!</h4><p>No FAT Link hash provided.</p>"
 msgstr "<h4>Warnung!</h4><p>Keinen FAT Link Hash zur Verfügung gestellt.</p>"
 
-#: views/fatlinks.py:877
+#: views/fatlinks.py:860
 msgid ""
-"<h4>Error!</h4><p>The fatlink hash provided is either invalid or the fatlink"
-" has already been deleted.</p>"
+"<h4>Error!</h4><p>The fatlink hash provided is either invalid or the fatlink "
+"has already been deleted.</p>"
 msgstr ""
 "<h4>Fehler!</h4><p>Der FAT Link Hash ist entweder ungültig oder der "
 "dazugehörige FAT Link wurde gelöscht.</p>"
 
-#: views/fatlinks.py:938
+#: views/fatlinks.py:884
+#, python-brace-format
 msgid ""
-"<h4>Error!</h4><p>The hash provided is either invalid or has been "
-"deleted.</p>"
+"<h4>Success!</h4><p>The FAT Link \"{fatlink_hash}\" and all associated FATs "
+"have been successfully deleted.</p>"
+msgstr ""
+
+#: views/fatlinks.py:919
+msgid ""
+"<h4>Error!</h4><p>The hash provided is either invalid or has been deleted.</"
+"p>"
 msgstr ""
 "<h4>Fehler!</h4><p>Der FAT Link Hash ist entweder ungültig oder der "
 "dazugehörige FAT Link wurde bereits gelöscht.</p>"
 
-#: views/fatlinks.py:951
+#: views/fatlinks.py:932
 msgid "<h4>Error!</h4><p>The hash and FAT ID do not match.</p>"
 msgstr ""
 "<h4>Fehler!</h4><p>Fat Link Hash und FAT Link ID passen nicht zusammen.</p>"
 
-#: views/fatlinks.py:1089
-msgid "<h4>Success!</h4><p>The FAT link has been successfully re-opened.</p>"
-msgstr ""
-"<h4>Erfolg!</h4><p>Der FAT Link wurde erfolgreich wieder geöffnet.</p>"
+#: views/fatlinks.py:950
+msgid ""
+"<h4>Success!</h4><p>The FAT for {fat_details.character.character_name} has "
+"been successfully deleted from FAT link \"{fatlink_hash}\".</p>"
+msgstr "</p>"
 
-#: views/fatlinks.py:1099
+#: views/fatlinks.py:1067
+msgid "<h4>Success!</h4><p>The FAT link has been successfully re-opened.</p>"
+msgstr "<h4>Erfolg!</h4><p>Der FAT Link wurde erfolgreich wieder geöffnet.</p>"
+
+#: views/fatlinks.py:1077
 msgid ""
 "<h4>Warning!</h4><p>This FAT link has already been re-opened. FAT links can "
 "be re-opened only once!</p>"
@@ -916,13 +960,12 @@ msgstr ""
 "<h4>Warnung!</h4><p>Dieser FAT Link wurde bereits einmal wieder geöffnet. "
 "Dies kann nur einmal getan werden.</p>"
 
-#: views/fatlinks.py:1110
+#: views/fatlinks.py:1088
 msgid ""
-"<h4>Error!</h4><p>The hash you provided does not match with any FAT "
-"link.</p>"
+"<h4>Error!</h4><p>The hash you provided does not match with any FAT link.</p>"
 msgstr ""
-"<h4>Fehler!</h4><p>Der zur Verfügung gestellt Hash passt zu keinem FAT "
-"Link.</p>"
+"<h4>Fehler!</h4><p>Der zur Verfügung gestellt Hash passt zu keinem FAT Link."
+"</p>"
 
 #: views/statistics.py:170
 msgid ""
@@ -941,8 +984,8 @@ msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for that "
 "corporation.</p>"
 msgstr ""
-"<h4>Warnung!</h4><p>Du hast nicht die Berechtigung die Statistiken für diese"
-" Corporation zu sehen.</p>"
+"<h4>Warnung!</h4><p>Du hast nicht die Berechtigung die Statistiken für diese "
+"Corporation zu sehen.</p>"
 
 #: views/statistics.py:508
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
