--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-11 22:24+0200\n"
+"POT-Creation-Date: 2023-04-17 14:31+0200\n"
 "PO-Revision-Date: 2023-04-11 20:41+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -82,7 +82,7 @@ msgstr "via ESI"
 
 #: helper/views_helper.py:87
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:34
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:27
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:33
 msgid ""
 "Clicking here will stop the automatic tracking through ESI for this fleet "
 "and close the associated FAT link."
@@ -102,8 +102,8 @@ msgstr ""
 #: helper/views_helper.py:92
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:39
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:42
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:32
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:35
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:38
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:41
 msgid "Stop Tracking"
 msgstr "Tracking stoppen"
 
@@ -324,7 +324,7 @@ msgid "Participation is being tracked via ESI"
 msgstr "Teilnahme wird via ESI verfolgt"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:38
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:31
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:37
 #, python-format
 msgid ""
 "<p>Are you sure you want to close ESI fleet with ID %(esi_fleet_id)s from "
@@ -374,7 +374,7 @@ msgid "Copy me!"
 msgstr "Kopier mich!"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:51
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:57
 #: templates/afat/view/dashboard/dashboard.html:26
 #: templates/afat/view/fatlinks/fatlinks_overview.html:50
 msgid "Close ESI Fleet Tracking"
@@ -447,21 +447,36 @@ msgid "FATs have been automatically tracked via ESI"
 msgstr "FATs wurden automatisch via ESI verfolgt"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:7
+#, fuzzy, python-format
+#| msgid ""
+#| "You currently have (an) active ESI fleet(s) under the following "
+#| "character(s):"
 msgid ""
-"You currently have (an) active ESI fleet(s) under the following character(s):"
-msgstr ""
+"\n"
+"                You currently have an active ESI fleet under the following "
+"character:\n"
+"            "
+msgid_plural ""
+"\n"
+"                You currently have %(open_esi_fleets)s active ESI fleets "
+"under the following characters:\n"
+"            "
+msgstr[0] ""
+"Du hast momentan eine oder mehrere aktive ESI Flotten mit den folgenden "
+"Charakteren:"
+msgstr[1] ""
 "Du hast momentan eine oder mehrere aktive ESI Flotten mit den folgenden "
 "Charakteren:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:19
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:25
 msgid "Fleet Name:"
 msgstr "Flottenname:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:19
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:25
 msgid "ESI fleet ID:"
 msgstr "ESI Flotten ID:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:43
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:49
 msgid ""
 "These fleets are already automatically tracked. However, you can still open "
 "more fleets with other alts, if that&apos;s what you like to do."
@@ -469,7 +484,7 @@ msgstr ""
 "Diese Flotten werden bereits automatisch verfolgt. Du kannst jedoch weitere "
 "Flotten mit Deinem Alts starten, wenn Du möchtest."
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:47
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:53
 msgid ""
 "Note: Information about your registered fleets might be delayed by up to 5 "
 "minutes."
@@ -613,7 +628,6 @@ msgid "Character Stats"
 msgstr "Charakterstatistik"
 
 #: templates/afat/partials/statistics/overview/tabs/corps.html:7
-#: templates/afat/partials/statistics/overview/tabs/corps.html:6
 msgid ""
 "Corporations <small>(Click on an alliance name to see their corporations)</"
 "small>"
@@ -1020,7 +1034,7 @@ msgstr ""
 "<h4>Warnung!</h4><p>Dieser FAT Link wurde bereits einmal wieder geöffnet. "
 "Dies kann nur einmal getan werden.</p>"
 
-#: views/statistics.py:213 views/statistics.py:209
+#: views/statistics.py:213
 msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for this "
 "character.</p>"
@@ -1028,11 +1042,11 @@ msgstr ""
 "<h4>Warnung!</h4><p>Du hast nicht die Berechtigung die Statistiken für "
 "diesen Charakter zu sehen.</p>"
 
-#: views/statistics.py:226 views/statistics.py:222
+#: views/statistics.py:226
 msgid "<h4>Warning!</h4><p>Date information not complete!</p>"
 msgstr "<h4>Warnung!</h4><p>Datumsinformationen nicht komplett!</p>"
 
-#: views/statistics.py:330 views/statistics.py:326
+#: views/statistics.py:330
 msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for that "
 "corporation.</p>"
@@ -1040,6 +1054,6 @@ msgstr ""
 "<h4>Warnung!</h4><p>Du hast nicht die Berechtigung die Statistiken für diese "
 "Corporation zu sehen.</p>"
 
-#: views/statistics.py:549 views/statistics.py:545
+#: views/statistics.py:549
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
 msgstr "<h4>Fehler!</h4><p>Datumsinformationen nicht komplett.</p>"
