--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 17:01+0200\n"
+"POT-Creation-Date: 2023-04-17 17:30+0200\n"
 "PO-Revision-Date: 2023-04-17 15:21+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -200,7 +200,7 @@ msgid "Whether this FAT link was created via ESI or not"
 msgstr "Wurde dieser FAT Link via ESI erstellt oder nicht"
 
 #: models.py:168
-msgid "Whether this is an ESI fat link is registered on ESI or not"
+msgid "Whether the fleet to this FAT link is available in ESI or not"
 msgstr ""
 
 #: models.py:174
