--- a/afat/locale/es/LC_MESSAGES/django.po
+++ b/afat/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 17:01+0200\n"
+"POT-Creation-Date: 2023-04-17 17:30+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -189,7 +189,7 @@ msgid "Whether this FAT link was created via ESI or not"
 msgstr ""
 
 #: models.py:168
-msgid "Whether this is an ESI fat link is registered on ESI or not"
+msgid "Whether the fleet to this FAT link is available in ESI or not"
 msgstr ""
 
 #: models.py:174
