--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 14:34+0200\n"
+"POT-Creation-Date: 2023-04-19 15:06+0200\n"
 "PO-Revision-Date: 2023-04-17 16:11+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
 "Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
@@ -653,29 +653,20 @@ msgstr "Flottenname:"
 msgid "ESI fleet ID:"
 msgstr "ESI Flotten ID:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:49
-msgid ""
-"\n"
-"                This fleet is already automatically tracked.\n"
-"            "
-msgid_plural ""
-"\n"
-"                These fleets are already automatically tracked.\n"
-"            "
-msgstr[0] ""
-msgstr[1] ""
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:50
+msgid "This fleet is already automatically tracked."
+msgstr ""
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:52
+msgid "These fleets are already automatically tracked."
+msgstr "Diese Flotten werden bereits automatisch verfolgt."
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:55
 #, fuzzy
-#| msgid ""
-#| "These fleets are already automatically tracked. However, you can still "
-#| "open more fleets with other alts, if that&apos;s what you like to do."
 msgid ""
 "However, you can still open more fleets with other alts, if that&apos;s what "
 "you like to do."
-msgstr ""
-"Diese Flotten werden bereits automatisch verfolgt. Du kannst jedoch weitere "
-"Flotten mit Deinem Alts starten, wenn Du möchtest."
+msgstr "Du kannst jedoch weitere Flotten mit Deinen Alts starten, wenn Du möchtest."
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:59
 msgid ""
