--- a/afat/locale/ko_KR/LC_MESSAGES/django.po
+++ b/afat/locale/ko_KR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 19:20+0200\n"
+"POT-Creation-Date: 2023-04-19 19:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -576,8 +576,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"                You currently have %(open_esi_fleets)s active ESI fleet "
-"under the following character:\n"
+"                You currently have an active ESI fleet under the following "
+"character:\n"
 "            "
 msgid_plural ""
 "\n"
