--- a/afat/locale/it_IT/LC_MESSAGES/django.po
+++ b/afat/locale/it_IT/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 19:20+0200\n"
+"POT-Creation-Date: 2023-04-19 19:34+0200\n"
 "PO-Revision-Date: 2023-04-19 08:19+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
 "Language-Team: Italian <https://weblate.ppfeufer.de/projects/alliance-auth-"
@@ -577,8 +577,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"                You currently have %(open_esi_fleets)s active ESI fleet "
-"under the following character:\n"
+"                You currently have an active ESI fleet under the following "
+"character:\n"
 "            "
 msgid_plural ""
 "\n"
