--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 19:20+0200\n"
+"POT-Creation-Date: 2023-04-19 19:34+0200\n"
 "PO-Revision-Date: 2023-04-19 16:55+0000\n"
 "Last-Translator: Nikolay <nick.postnikov@gmail.com>\n"
 "Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
@@ -610,11 +610,21 @@ msgid "FATs have been automatically tracked via ESI"
 msgstr "пилоты автоматически отслеживались посредством ESI"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:7
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "                You currently have %(open_esi_fleets)s active ESI fleet "
+#| "under the following character:\n"
+#| "            "
+#| msgid_plural ""
+#| "\n"
+#| "                You currently have %(open_esi_fleets)s active ESI fleets "
+#| "under the following characters:\n"
+#| "            "
 msgid ""
 "\n"
-"                You currently have %(open_esi_fleets)s active ESI fleet "
-"under the following character:\n"
+"                You currently have an active ESI fleet under the following "
+"character:\n"
 "            "
 msgid_plural ""
 "\n"
