--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-21 21:03+0200\n"
+"POT-Creation-Date: 2023-04-26 20:43+0200\n"
 "PO-Revision-Date: 2023-04-21 20:53+0000\n"
 "Last-Translator: Nikolay <nick.postnikov@gmail.com>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,6 +77,7 @@ msgstr "Обязательное поле"
 #: templates/afat/partials/dashboard/tabs/fatlinks.html:12
 #: templates/afat/partials/dashboard/tabs/fats.html:40
 #: templates/afat/partials/fatlinks/details/fatlink_name_form.html:10
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:25
 #: templates/afat/view/fatlinks/fatlinks_overview.html:25
 msgid "Fleet Name"
 msgstr "Название флота"
@@ -267,7 +268,7 @@ msgstr "Флот этого БВ все еще доступен посредст
 msgid "Has this FAT link being re-opened?"
 msgstr "Ссылка РБВ была реактивирована?"
 
-#: models.py:205
+#: models.py:205 templates/afat/partials/fatlinks/details/fatlink_info.html:72
 msgid "FAT Link"
 msgstr "Боевой Вылет"
 
@@ -383,6 +384,7 @@ msgid "Most Recent FAT Links <small>(latest 10)</small>"
 msgstr "Недавние Боевые Вылеты <small>(последние 10)</small>"
 
 #: templates/afat/partials/dashboard/tabs/fatlinks.html:14
+#: templates/afat/partials/fatlinks/details/fatlink_info.html:6
 #: templates/afat/view/fatlinks/fatlinks_overview.html:27
 msgid "Creator"
 msgstr "Создатель"
@@ -486,20 +488,22 @@ msgstr ""
 msgid "Add ESI Link"
 msgstr "Начать ESI отслеживание флота"
 
-#: templates/afat/partials/fatlinks/details/fatlink_info.html:6
-msgid "Creator:"
-msgstr "Создатель:"
-
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:11
-msgid "Link Created (Eve Time):"
+#, fuzzy
+#| msgid "Link Created (Eve Time):"
+msgid "Link Created (Eve Time)"
 msgstr "Время создания (Время EVE):"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:17
-msgid "Link Expires (Eve Time):"
+#, fuzzy
+#| msgid "Link Expires (Eve Time):"
+msgid "Link Expires (Eve Time)"
 msgstr "Срок действия истекает (Время EVE):"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:19
-msgid "Link Expired (Eve Time):"
+#, fuzzy
+#| msgid "Link Expired (Eve Time):"
+msgid "Link Expired (Eve Time)"
 msgstr "Срок действия истек (Время EVE):"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:29
@@ -548,10 +552,6 @@ msgstr "Реактивировать"
 msgid "Re-Open FAT link"
 msgstr "Реактивировать ссылку РБВ"
 
-#: templates/afat/partials/fatlinks/details/fatlink_info.html:72
-msgid "FAT Link:"
-msgstr "Ссылка РБВ:"
-
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:84
 msgid "Copy me!"
 msgstr "Скопируй меня!"
@@ -597,7 +597,9 @@ msgid "Is someone missing from the list of FATs? Use this form to add them."
 msgstr "Пилот отсутствует в списке? Используйте форму, чтобы добавить его."
 
 #: templates/afat/partials/fatlinks/details/tabs/manualfat.html:11
-msgid "Note:"
+#, fuzzy
+#| msgid "Note:"
+msgid "Note"
 msgstr "Примечание:"
 
 #: templates/afat/partials/fatlinks/details/tabs/manualfat.html:11
@@ -655,11 +657,9 @@ msgstr[3] ""
 "            "
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:25
-msgid "Fleet Name:"
-msgstr "Название флота:"
-
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:25
-msgid "ESI fleet ID:"
+#, fuzzy
+#| msgid "ESI fleet ID:"
+msgid "ESI fleet ID"
 msgstr "ESI ID флота:"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:49
