--- a/afat/locale/ko_KR/LC_MESSAGES/django.po
+++ b/afat/locale/ko_KR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-21 23:24+0200\n"
+"POT-Creation-Date: 2023-07-23 22:15+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,7 +25,7 @@ msgid "Fleet Type"
 msgstr ""
 
 #: admin.py:160
-msgid "Is Enabled"
+msgid "Is enabled"
 msgstr ""
 
 #: admin.py:174
