--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-21 23:24+0200\n"
+"POT-Creation-Date: 2023-07-23 22:15+0200\n"
 "PO-Revision-Date: 2023-06-22 22:18+0000\n"
 "Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +32,9 @@ msgid "Fleet Type"
 msgstr "Тип флота"
 
 #: admin.py:160
-msgid "Is Enabled"
+#, fuzzy
+#| msgid "Is Enabled"
+msgid "Is enabled"
 msgstr "Разрешен"
 
 #: admin.py:174
