--- a/afat/locale/uk/LC_MESSAGES/django.po
+++ b/afat/locale/uk/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-21 23:24+0200\n"
+"POT-Creation-Date: 2023-07-23 22:15+0200\n"
 "PO-Revision-Date: 2023-05-13 16:56+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
 "Language-Team: Ukrainian <https://weblate.ppfeufer.de/projects/alliance-auth-"
@@ -28,7 +28,9 @@ msgid "Fleet Type"
 msgstr "Тип флоту"
 
 #: admin.py:160
-msgid "Is Enabled"
+#, fuzzy
+#| msgid "Is Enabled"
+msgid "Is enabled"
 msgstr "Дозволено"
 
 #: admin.py:174
