--- a/afat/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/afat/locale/zh_Hans/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-23 22:15+0200\n"
+"POT-Creation-Date: 2023-07-28 00:29+0200\n"
 "PO-Revision-Date: 2023-07-27 19:17+0000\n"
 "Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
 "Language-Team: Chinese (Simplified) <https://weblate.ppfeufer.de/projects/"
@@ -623,6 +623,19 @@ msgstr ""
 msgid ""
 "Note: Information about your registered fleets might be delayed by up to 5 "
 "minutes."
+msgstr ""
+
+#: templates/afat/partials/footer/app-translation-footer.html:4
+msgid "Join our team of translators!"
+msgstr ""
+
+#: templates/afat/partials/footer/app-translation-footer.html:7
+#, python-format
+msgid ""
+"\n"
+"            Do you want to help translate this app into your language or "
+"improve the existing translation? - %(weblate_link)s\n"
+"        "
 msgstr ""
 
 #: templates/afat/partials/form/required_field_hint.html:4
