--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-28 00:29+0200\n"
+"POT-Creation-Date: 2023-07-30 18:59+0200\n"
 "PO-Revision-Date: 2023-07-29 23:45+0000\n"
 "Last-Translator: Nikolay <nick.postnikov@gmail.com>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -710,22 +710,25 @@ msgstr ""
 "Примечание: информация о Ваших зарегистрированных флотах может задерживаться "
 "до 5 минут."
 
-#: templates/afat/partials/footer/app-translation-footer.html:4
-msgid "Join our team of translators!"
-msgstr "Присоединяйтесь к нашей команде переводчиков!"
-
-#: templates/afat/partials/footer/app-translation-footer.html:7
-#, python-format
+#: templates/afat/partials/footer/app-translation-footer.html:5
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "            Do you want to help translate this app into your language or "
+#| "improve the existing translation? - %(weblate_link)s\n"
+#| "        "
 msgid ""
-"\n"
-"            Do you want to help translate this app into your language or "
-"improve the existing translation? - %(weblate_link)s\n"
-"        "
+"Do you want to help translate this app into your language or improve the "
+"existing translation?"
 msgstr ""
 "\n"
 "            Вы хотите помочь перевести это приложение на ваш язык или "
 "улучшить текущий перевод? - %(weblate_link)s\n"
 "        "
+
+#: templates/afat/partials/footer/app-translation-footer.html:8
+msgid "Join our team of translators!"
+msgstr "Присоединяйтесь к нашей команде переводчиков!"
 
 #: templates/afat/partials/form/required_field_hint.html:4
 msgid "Fields marked with an asterisk (*) are mandatory"
