[MISC] Forcing Weblate to sync both ways

--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-22 17:57+0200\n"
+"POT-Creation-Date: 2023-09-24 15:57+0200\n"
 "PO-Revision-Date: 2023-09-24 13:12+0000\n"
 "Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -165,8 +165,8 @@ msgid ""
 "<p>Are you sure you want to close ESI fleet with ID {fatlink.esi_fleet_id} "
 "from {fatlink.character.character_name}?</p>"
 msgstr ""
-"<p>Действительно остановить ESI отслеживание флота с идентификатором {fatlink"
-".esi_fleet_id} пилота {fatlink.character.character_name}?</p>"
+"<p>Действительно остановить ESI отслеживание флота с идентификатором "
+"{fatlink.esi_fleet_id} пилота {fatlink.character.character_name}?</p>"
 
 #: helper/views.py:93
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:39
@@ -538,10 +538,9 @@ msgid ""
 "%(reopen_duration)s minutes?<br>FAT links can be re-opened only once!"
 "<br><em>(Be aware, this action will be logged)</em></p>"
 msgstr ""
-"<p>Действительно реактивировать ссылку на %(reopen_duration)s "
-"минут?<br>Ссылка может быть реактивирована только один "
-"раз!<br><em>(Предупреждение: данное действие будет занесено в "
-"журнал)</em></p>"
+"<p>Действительно реактивировать ссылку на %(reopen_duration)s минут?"
+"<br>Ссылка может быть реактивирована только один раз!"
+"<br><em>(Предупреждение: данное действие будет занесено в журнал)</em></p>"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:62
 msgid "Re-Open"
@@ -1183,8 +1182,8 @@ msgid ""
 "<h4>Error!</h4><p>Something went wrong when attempting to submit your ESI "
 "FAT link.</p>"
 msgstr ""
-"<h4>Ошибка!</h4><p>Что-то пошло не так при попытке ESI отслеживания "
-"флота.</p>"
+"<h4>Ошибка!</h4><p>Что-то пошло не так при попытке ESI отслеживания флота.</"
+"p>"
 
 #: views/fatlinks.py:529 views/fatlinks.py:894
 msgid "<h4>Warning!</h4><p>No FAT link hash provided.</p>"
@@ -1272,8 +1271,8 @@ msgid ""
 "<h4>Oh No!</h4><p>Manual FAT processing failed! The character name you "
 "entered was not found.</p>"
 msgstr ""
-"<h4>Упс!</h4><p>Ошибка редактирования БВ! Пилот с введенным именем не "
-"найден.</p>"
+"<h4>Упс!</h4><p>Ошибка редактирования БВ! Пилот с введенным именем не найден."
+"</p>"
 
 #: views/fatlinks.py:784
 msgid "<h4>Oh No!</h4><p>Something went wrong!</p>"
@@ -1328,8 +1327,8 @@ msgstr ""
 msgid ""
 "<h4>Error!</h4><p>The hash you provided does not match with any FAT link.</p>"
 msgstr ""
-"<h4>Ошибка!</h4><p>Предоставленный hash не соответствует никакому БВ "
-"флота.</p>"
+"<h4>Ошибка!</h4><p>Предоставленный hash не соответствует никакому БВ флота.</"
+"p>"
 
 #: views/fatlinks.py:1121
 msgid "<h4>Success!</h4><p>The FAT link has been successfully re-opened.</p>"
@@ -1348,8 +1347,8 @@ msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for this "
 "character.</p>"
 msgstr ""
-"<h4>Внимание!</h4><p>У Вас нет прав для просмотра статистики этого "
-"пилота.</p>"
+"<h4>Внимание!</h4><p>У Вас нет прав для просмотра статистики этого пилота.</"
+"p>"
 
 #: views/statistics.py:234
 msgid "<h4>Warning!</h4><p>Date information not complete!</p>"
@@ -1360,8 +1359,8 @@ msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for that "
 "corporation.</p>"
 msgstr ""
-"<h4>Внимание!</h4><p>У Вас нет прав для просмотра статистики этой "
-"корпорации.</p>"
+"<h4>Внимание!</h4><p>У Вас нет прав для просмотра статистики этой корпорации."
+"</p>"
 
 #: views/statistics.py:467 views/statistics.py:701
 msgid "Monday"
